test/conformance/chainsaw/image-validating-policies/context/resource/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    env: prod
  name: policy-pod
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: nginx
    resources: {}
  restartPolicy: Always
  securityContext: {}
