test/conformance/chainsaw/image-validating-policies/context/resource/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ImageValidatingPolicy
metadata:
  name: ivpol-resource-lookup-sample
spec:
  webhookConfiguration:
    timeoutSeconds: 20
  matchConstraints:
    resourceRules:
    - apiGroups:   [apps]
      apiVersions: [v1]
      operations:  [CREATE, UPDATE]
      resources:   [deployments]
  variables:
    - name: pod
      expression: >-
        resource.get("v1", "pods", object.metadata.namespace, "policy-pod")
    - name: environment
      expression: >-
        has(object.metadata.labels) && 'env' in object.metadata.labels && object.metadata.labels['env'] == variables.pod.metadata.labels.env
  validations:
    - expression: >-
        variables.environment == true
      message: >-
        Deployment labels must be env=prod
  matchImageReferences:
    - glob: ghcr.io/*
  validationConfigurations:
    mutateDigest: false
  attestors:
    - name: notary
      notary:
        certs:
          value: |-
            -----BEGIN CERTIFICATE-----
            MIIDTTCCAjWgAwIBAgIJAPI+zAzn4s0xMA0GCSqGSIb3DQEBCwUAMEwxCzAJBgNV
[...]
            uOKpF5rWAruB5PCIrquamOejpXV9aQA/K2JQDuc0mcKz
            -----END CERTIFICATE-----
  attestations:
    - name: sbom
      referrer:
        type: sbom/cyclone-dx
