test/conformance/chainsaw/image-validating-policies/context/resource/positive.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: positive
  labels:
    app: nginx
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      env: prod
  template:
    metadata:
      labels:
        app: nginx
        env: prod
    spec:
      containers:
      - name: nginx
        image: public.ecr.aws/docker/library/nginx:latest
